feat: Monthly item bookings

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -686,12 +686,14 @@ Approval Status must be 'Approved' or 'Rejected',Le Statut d'Approbation doit ê
 Approval Status,Statut d'approbation,
 Approved,Approuvé,
 Approver,Approbateur,
+Approvers,Approbateurs,
 Approving Role (above authorized value),Rôle Approbateur (valeurs autorisées ci-dessus),
 Approving Role cannot be same as role the rule is Applicable To,Le Rôle Approbateur ne peut pas être identique au rôle dont la règle est Applicable,
 Approving User  (above authorized value),Utilisateur Approbateur (valeurs autorisées ci-dessus),
 Approving User cannot be same as user the rule is Applicable To,L'Utilisateur Approbateur ne peut pas être identique à l'utilisateur dont la règle est Applicable,
 "Apps using current key won't be able to access, are you sure?","Les applications utilisant la clé actuelle ne pourront plus y accéder, êtes-vous sûr?",
 April,Avril,
+Are you sure you want to create {0} from this email ?,Etes-vous certain de vouloir créer un·e {0} à partir de cet email ?,
 Are you sure you want to make credit note?,Êtes-vous sûr de vouloir créer une note de crédit,
 Are you sure you want to make debit note?,Êtes-vous sûr de vouloir créer une note de débit,
 Are you sure you want to restart this subscription?,Êtes-vous certain de vouloir redémarrer cet abonnement,
@@ -1204,6 +1206,7 @@ Calculated in days,Calculé en jours,
 Calculations,Calculs,
 Calendar Event,Evénement du calendrier,
 Calendar Title,Titre du calendrier,
+Calendar Type,Type de calendrier,
 Calendar color,Couleur dans l'agenda,
 Calibration,Étalonnage,
 Call Connected,Appel connecté,
@@ -2403,6 +2406,7 @@ Documents,Documents,
 Dokos Company,Société Dokos,
 Dokos Payment Status,Statut du paiement Dokos,
 Dokos Payment,Paiement Dokos,
+Dokos Settings,Paramètres Dokos,
 Domain,Domaine,
 Domains,Domaines,
 Domestic,National,
@@ -2410,6 +2414,7 @@ Don't send Employee Birthday Reminders,Ne pas envoyer de rappel pour le Jour d'A
 Done,Terminé,
 Doors,Portes,
 Double Declining Balance,Double Solde Dégressif,
+Down Payment Against,Facture liée à l'acompte,
 Down Payment Percentage,Pourcentage d'acompte,
 Down Payment Rate,Pourcentage d'acompte,
 Down Payment,Acompte,
@@ -2685,6 +2690,7 @@ Encashment,Encaissement,
 Encrypt Salary Slips in Emails,Crypter les fiches de paie dans les emails,
 End Date can not be less than Start Date,La date de Fin ne peut pas être antérieure à la Date de Début,
 End Date cannot be before Start Date.,La date de fin ne peut pas être antérieure à la date de début.,
+End Date must not be lesser than Start Date,La date de fin doit être inférieure à la date de début,
 End Date of Agreement can't be less than today.,La date de fin de l'accord ne peut pas être avant aujourd'hui.,
 End Date,Date de fin,
 End Day,Jour de fin,
@@ -3730,6 +3736,7 @@ Invoiced,Facturé,
 Invoices for Customers.,Factures pour les clients,
 Invoices with no Place Of Supply,Factures sans lieu d'approvisionnement,
 Invoices,Factures,
+Invoicing error for subscription {0},Erreur de facturation pour l'abonnement {0},
 Invoicing status,Statut de facturation,
 Inward Supplies(liable to reverse charge),Achats entrants (soumis à autoliquidation),
 Inward Supplies(liable to reverse charge,Fournitures entrantes (soumises à auto liquidation),
@@ -4953,6 +4960,7 @@ Ongoing Job Cards,Cartes de travail en cours,
 Ongoing,En cours,
 Online Auctions,Enchères en Ligne,
 Online,En ligne,
+Only Approvers can Approve this Request.,Seuls les approbateurs peuvent approuver cette demande.,
 Only Leave Applications with status 'Approved' and 'Rejected' can be submitted,Seules les Demandes de Congés avec le statut 'Appouvée' ou 'Rejetée' peuvent être soumises,
 Only Tax Impact (Cannot Claim But Part of Taxable Income),Impact fiscal uniquement (ne peut être perçu mais fait partie du revenu imposable),
 Only expired allocation can be cancelled,Seules les allocations expirées peuvent être annulées,
@@ -5037,6 +5045,7 @@ Opportunity Lost Reason Detail,Détails de la raison de la perte de l'opportunit
 Opportunity Lost Reason,Raison pour la perte de l'opportunité,
 Opportunity Trends,Tendance des opportunités,
 Opportunity Type,Type d'Opportunité,
+Opportunity {0} created,Opportunité {0} créée,
 Opportunity,Opportunité,
 Optimize Route,Optimiser l'itinéraire,
 Optional Holiday List not set for leave period {0},Une liste de vacances facultative n'est pas définie pour la période de congé {0},
@@ -5257,8 +5266,8 @@ Pay,Payer,
 Payable Account,Comptes créditeurs,
 Payable Amount,Montant à payer,
 Payable Principal Amount,Montant du principal à payer,
-Payable,Créditeur,
 Payable,A régler,Subscription
+Payable,Créditeur,
 Payables,Dettes,
 Payer Settings,Paramètres du Payeur,
 Payment Account is mandatory,Le compte de paiement est obligatoire,
@@ -5600,6 +5609,7 @@ Please select Completion Date for Completed Asset Maintenance Log,Veuillez séle
 Please select Completion Date for Completed Repair,Veuillez sélectionner la date d'achèvement pour la réparation terminée,
 Please select Customer first,Veuillez commencer par sélectionner un client,
 Please select Employee Record first.,Veuillez d’abord sélectionner le Dossier de l'Employé.,
+Please select Employee first.,Veuillez d'abord sélectionner un employé.,
 Please select Employee,Veuillez sélectionner un employé,
 Please select Existing Company for creating Chart of Accounts,Veuillez sélectionner une Société Existante pour créer un Plan de Compte,
 Please select Incharge Person's name,Veuillez sélectionner le nom du/de la Responsable,
@@ -6994,6 +7004,7 @@ Select Terms and Conditions,Sélectionner les Termes et Conditions,
 Select Transaction,Sélectionner une transaction,
 Select Users,Sélectionner les utilisateurs,
 Select Warehouse...,Sélectionner l'entrepôt ...,
+Select a Company,Sélectionnez une société,
 Select a Default Priority.,Sélectionnez une priorité par défaut.,
 Select a Supplier from the Default Supplier List of the items below.,Sélectionnez un fournisseur dans la liste des fournisseurs par défaut pour les articles ci-dessous.,
 Select a bank transaction to find matching transactions,Sélectionnez une transaction bancaire pour trouver des documents correspondants.,
@@ -7702,6 +7713,7 @@ Subscription Template,Modèle d'abonnement,
 Subscription created,Abonnement crée,
 Subscription hourly processing error for {},Erreur de traitement pour l'abonnement {},
 Subscription up to date,Abonnement à jour,
+Subscription update error for subscription {0},Erreur de mise à jour d'abonnement pour l'abonnement {0},
 Subscription update failed. Please try again or check the error log.,La mise à jour de l'abonnement à échoué. Veuillez réessayer ou vérifier les journaux d'erreur.,
 Subscription update in progress,Mise à jour de l'abonnement en cours,
 "Subscription {0} has already invoice {1} for the current period, but the invoice references don't match. Please check your subscription.","L'abonnement {0} a déjà la facture {1} pour la période en cours, mais les références de facture ne correspondent pas. Veuillez vérifier votre abonnement.",
