feat: New button to change invoicing period end

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -74,7 +74,7 @@
 "A BOM with name {0} already exists for item {1}.
 					<br> Did you rename the item? Please contact Administrator / Tech support
 				",Une nomenclature avec le nom {0} existe déjà pour l'article {1}. Avez vous renommé l'article ? Veuillez contacter votre administrateur / support technique.,
-A Customer Group exists with same name please change the Customer name or rename the Customer Group,"Un Groupe de clients existe avec le même nom, veuillez changer le nom du Client ou renommer le Groupe de clients",
+A Customer Group exists with same name please change the Customer name or rename the Customer Group,"Un groupe de clients existe avec le même nom, veuillez changer le nom du client ou renommer le Groupe de clients",
 A Default Service Level Agreement already exists.,Un accord de niveau de service par défaut existe déjà.,
 A Distributed Cost Center cannot be added in the Distributed Cost Center allocation table.,Un centre de coûts distribué ne peut pas être ajouté dans la table d'allocation des centres de coûts distribués.,
 A Lead requires either a person's name or an organization's name,Il faut au moins un nom de personne physique ou d'organisation dans un prospect.,
@@ -1915,16 +1915,16 @@ Custodian,Responsable,
 Custom Formula,Formule personnalisée,
 Custom HTML,HTML personnalisé,
 Custom?,Personnalisé ?,
-Customer / Item Name,Nom du Client / de l'Article,
-Customer / Lead Address,Adresse du client / Prospect,
-Customer / Lead Name,Nom du Client / Prospect,
+Customer / Item Name,Nom du client / de l'article,
+Customer / Lead Address,Adresse du client / prospect,
+Customer / Lead Name,Nom du client / prospect,
 Customer > Customer Group > Territory,Client > Groupe de clients > Territoire,
 Customer Acquisition and Loyalty,Acquisition et loyauté des clients,
 Customer Address,Adresse du client,
-Customer Addresses And Contacts,Adresses et Contacts des Clients,
-Customer Code,Code Client,
-Customer Contact Email,Email Contact Client,
-Customer Contact,Contact Client,
+Customer Addresses And Contacts,Adresses et contacts des clients,
+Customer Code,Code client,
+Customer Contact Email,Email du contact client,
+Customer Contact,Contact du client,
 Customer Credit Balance,Solde de crédit par client,
 Customer Credit Limit,Limite de crédit par client,
 Customer Database.,Base de donnée clients,
