fix: Subscription fields logic

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -3055,7 +3055,7 @@ Friday,Vendredi,
 From Address 1,Ligne d'addresse 1 (Origine),
 From Address 2,Ligne d'addresse 2 (Origine),
 From Amount,Du Montant,
-From BOM,De nomenclature,
+From BOM,A partir d'une nomenclature,
 From Company,De la Société,
 From Currency and To Currency cannot be same,La Devise de Base et la Devise de Cotation ne peuvent pas identiques,
 From Currency,De la Devise,
