--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -7291,7 +7291,7 @@ Shift Assignment,Affectation de quart,
 Shift End,Fin du quart,
 Shift Management,Gestion des quarts,
 Shift Request Approver,Approbateur de demande de quart,
-Shift Request,Création de quart,
+Shift Request,Sélection de quart,
 Shift Start,Début du quart,
 Shift Type,Type de quart,
 Shift,Quarts,
