feat: Event slots UX enhancement

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -869,6 +869,7 @@ Available Stock for Packing Items,Stock disponible pour les articles colisés,
 Available Stock,Stock disponible,
 Available for use date is required,La date de mise en service est nécessaire,
 "Available quantity is {0}, you need {1}","La quantité disponible est {0}, vous avez besoin de {1}",
+Available slots,Postes disponibles,
 Available {0},Disponible {0},
 Available-for-use Date should be after purchase date,La date de disponibilité devrait être postérieure à la date d'achat,
 Available-for-use Date,Date de mise en service,
@@ -3136,6 +3137,7 @@ Fully Completed,Entièrement Complété,
 Fully Delivered,Entièrement Livré,
 Fully Depreciated,Complètement déprécié,
 Fully Sponsored,Entièrement commandité,
+Fully booked,Entièrement réservé,
 Funded Amount,Montant financé,
 Furnitures and Fixtures,Meubles et Accessoires,
 "Further accounts can be made under Groups, but entries can be made against non-Groups","D'autres comptes individuels peuvent être créés dans les groupes, mais les écritures ne peuvent être faites que sur les comptes individuels",
@@ -4853,6 +4855,7 @@ No products found,Aucun produit trouvé,
 No record found,Aucun enregistrement trouvé,
 No records found in the Invoice table,Aucun enregistrement trouvé dans la table Facture,
 No records found in the Payment table,Aucun enregistrement trouvé dans la table Paiement,
+No registered user,Aucun utilisateur enregistré,
 No repayments available for Journal Entry,Aucun remboursement disponible pour l'Écriture de journal,
 No repayments selected for Journal Entry,Aucun remboursement sélectionné pour l'Écriture de journal,
 No replies from,Pas de réponse de,
@@ -4891,6 +4894,7 @@ Not allowed to create accounting dimension for {0},Création d'une dimension com
 Not allowed to update stock transactions older than {0},Non autorisé à mettre à jour les transactions du stock antérieures à {0},
 Not authorized to edit frozen Account {0},Vous n'êtes pas autorisé à modifier le compte gelé {0},
 Not authroized since {0} exceeds limits,Non autorisé car {0} dépasse les limites,
+Not available,Non disponible,
 Not confirmed,Non confirmé,
 Not in Stock,En Rupture de Stock,
 Not in stock,Plus en stock,
@@ -6399,6 +6403,8 @@ Region,Région,
 Regional,Régional,
 Register the paid amount,Entrez le montant à payer,
 Register,S'enregistrer,
+Registered Emails,Emails enregistrés,
+Registered Users,Utilisateurs enregistrés,
 Registered on GoCardless,Enregistré via GoCardless,
 Registration Details,Informations Légales,
 Regular Payment,Paiement régulier,
@@ -7433,7 +7439,9 @@ Skype ID,ID Skype,
 Slideshow,Diaporama,
 Slot End Time,Heure de fin du créneau,
 Slot Start Time,Heure de début du créneau,
+Slot Title,Titre du poste,
 Slot availability error,Erreur de calcul des créneaux disponibles,
+Slots available,Postes disponibles,
 Small,Petit,
 Smoothing Constant,Constante de lissage,
 Soap & Detergent,Savons & Détergents,
