fix: Pricing rule condition

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -3516,7 +3516,7 @@ If this is unchecked direct GL Entries will be created to book Deferred Revenue/
 Ignore Employee Time Overlap,Ignorer les chevauchements de temps des employés,
 Ignore Existing Ordered Qty,Ignorer la quantité commandée existante,
 Ignore Existing Projected Quantity,Ignorer les quantités projetées en cours,
-Ignore Pricing Rule,Ignorer les règles de tarification,
+Ignore Pricing Rule,Ignorer les règles de prix,
 Ignore User Time Overlap,Ignorer les chevauchements de temps des utilisateurs,
 Ignore Workstation Time Overlap,Ignorer les chevauchements de temps des stations de travail,
 Ignore,Ignorer,
@@ -8339,7 +8339,7 @@ To date needs to be before from date,La date de fin doit être avant la date de 
 "To know more about projected quantity, <a href=""https://erpnext.com/docs/user/manual/en/stock/projected-quantity"" style=""text-decoration: underline;"" target=""_blank"">click here</a>.","Pour en savoir plus sur les quantités projetés, <a href=""https://erpnext.com/docs/user/manual/en/stock/projected-quantity"" style=""text-decoration: underline;"" target=""_blank"">cliquez ici</a>.",
 To make Customer based incentive schemes.,Faire des programmes d'incitation basés sur le client.,
 "To merge, following properties must be same for both items","Pour fusionner, les propriétés suivantes doivent être les mêmes pour les deux articles",
-"To not apply Pricing Rule in a particular transaction, all applicable Pricing Rules should be disabled.","Pour ne pas appliquer la règle de prix dans une transaction particulière, toutes les règles de tarification applicables doivent être désactivées en cochant la case 'Ignorer les règles de tarification'.",
+"To not apply Pricing Rule in a particular transaction, all applicable Pricing Rules should be disabled.","Pour ne pas appliquer la règle de prix dans une transaction particulière, toutes les règles de tarification applicables doivent être désactivées en cochant la case 'Ignorer les règles de prix'.",
 "To set this Fiscal Year as Default, click on 'Set as Default'","Pour définir cet Exercice Fiscal par défaut, cliquez sur ""Définir par défaut""",
 "To still proceed with editing this Attribute Value, enable {0} in Item Variant Settings.","Pour éditer la valeur de cet attribut malgré tout, activez {0} dans les paramètres de variante d'article",
 To view logs of Loyalty Points assigned to a Customer.,Pour afficher les journaux des points de fidélité attribués à un client.,
