feat: Portal UI enhancement

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -1928,6 +1928,7 @@ Currently no stock available in any warehouse,Il n'y actuellement aucun stock di
 Custodian,Responsable,
 Custom Formula,Formule personnalisée,
 Custom HTML,HTML personnalisé,
+Custom Remarks,Remarques personnalisées,
 Custom?,Personnalisé ?,
 Customer / Item Name,Nom du client / de l'article,
 Customer / Lead Address,Adresse du client / prospect,
@@ -2784,6 +2785,7 @@ Event Name,Nom de l'Événement,
 Event Slot Booking,Inscription à un poste d'événement,
 Event Slot Bookings,Inscriptions à un poste d'événement,
 Event Slot,Poste d'événement,
+Event Slots,Poste d'événement,
 Event Status,Statut de l'Événement,
 Event Subject,Sujet de l'événement,
 Event Synced with Google Calendar.,Evénements synchronisés avec Google Agenda.,
@@ -3401,6 +3403,7 @@ Hiring Settings,Paramètres de recrutement,
 History In Company,Ancienneté dans la Société,
 Hold Invoice,Facture en attente,
 Hold Type,Documents mis en attente,
+Hold,Mis en attente,Issue
 Hold,Mettre en attente,
 Holiday List (ignored during SLA calculation),Liste de vacances (ignoré pour le calcul de l'accord de niveau de service),
 Holiday List Name,Nom de la liste de congés,
@@ -3629,6 +3632,7 @@ Initial Email Notification Sent,Notification initiale par e-mail envoyée,
 Initial balance,Solde initial,
 Initial date for the period.,Date de début de la période,
 Initiated,Initié,
+Inquiry about,Demande concernant,
 Insert,Insérer,
 Inspected By,Inspecté Par,
 Inspection Criteria,Critères d'Inspection,
@@ -5026,6 +5030,7 @@ Open To Do,ToDo ouvertes,
 Open Work Orders,Ordres de travail ouverts,
 Open a new ticket,Ouvrir un nouveau ticket,
 Open,Ouvert,
+Opening & Closing,Ouverture & Clôture,
 Opening (Cr),Ouverture (Cr),
 Opening (Dr),Ouverture (Dr),
 Opening Accumulated Depreciation must be less than equal to {0},Amortissement Cumulé d'Ouverture doit être inférieur ou égal à {0},
@@ -5512,6 +5517,8 @@ Plants and Machineries,Usines et machines,
 Please <a href=\,Veuillez <a href=\,
 Please Select a Company.,Veuillez sélectionner une société.,
 Please Select a Company,Veuillez sélectionner une société,
+Please Select a Customer,Veuillez sélectionner un client,
+Please Select a Supplier,Veuillez sélectionner un fournisseur,
 Please Set Supplier Group in Buying Settings.,Veuillez définir un groupe de fournisseurs par défaut dans les paramètres d'achat.,
 Please add Mode of payments and opening balance details.,Veuillez ajouter des modes de paiement et les détails de votre solde d'ouverture.,
 Please add a Swift Number in bank account {0} for customer {1},Veuillez ajouter un BIC dans le compte bancaire {0} pour le client {1},
@@ -7280,6 +7287,7 @@ Setting Account Type helps in selecting this Account in transactions.,Définir l
 "Setting Events to {0}, since the Employee attached to the below Sales Persons does not have a User ID{1}","Définir les Événements à {0}, puisque l'employé attaché au Commercial ci-dessous n'a pas d'ID Utilisateur {1}",
 Setting defaults,Définition des valeurs par défaut,
 Setting up company,Paramétrage de la société,
+Settings & Configurations,Paramètres & Configurations,
 Settings for Accounts,Paramètres de comptabilité,
 Settings for Buying Module,Paramètres du Module Achat,
 Settings for Selling Module,Paramètres pour le module Vente,
