fix: website style fix

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -7004,6 +7004,7 @@ Search for a payment,Chercher un paiement,
 Search for a specific bank transaction,Chercher une transaction en particulier,
 Search for a specific document,Chercher un document en particulier,
 Search results for,Résultats de recherche pour,
+Search the docs (Press / to focus),Rechercher dans la documentation (Appuyez sur / pour démarrer),
 Search,Rechercher,
 "Seasonality for setting budgets, targets etc.","Saisonnalité de l'établissement des budgets, des objectifs, etc.",
 Second Email,Deuxième email,
