feat: booking credit wip

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -1662,7 +1662,7 @@ Contribution to Net Total,Contribution au Total Net,
 Control Action,Action de contrôle,
 Conversion Factor,Facteur de Conversion,
 Conversion Rate,Taux de Conversion,
-Conversion factor for default Unit of Measure must be 1 in row {0},Facteur de conversion de l'Unité de Mesure par défaut doit être 1 dans la ligne {0},
+Conversion factor for default Unit of Measure must be 1 in row {0},Le facteur de conversion par défaut doit être 1 dans la ligne {0},
 Conversion rate cannot be 0 or 1,Le taux de conversion ne peut pas être égal à 0 ou 1,
 Convert Item Description to Clean HTML,Convertir la description de l'élément pour nettoyer le code HTML,
 Convert to Group,Convertir en Groupe,
@@ -8634,10 +8634,10 @@ Type,Type,
 Types of activities for Time Logs,Types d'activités pour Journaux de Temps,
 UK,Royaume-Uni,
 UOM Category,Catégorie d'unité de mesure (Unité de mesure),
-UOM Conversion Detail,Détails de Conversion de l'Unité de mesure,
-UOM Conversion Factor,Facteur de conversion de l'unité de mesure,
+UOM Conversion Detail,Détails de conversion de l'unité de mesure,
+UOM Conversion Factor,Facteur de conversion,
 UOM Conversion factor ({0} -> {1}) not found for item: {2},Facteur de conversion d'unité de mesure ({0} -> {1}) introuvable pour l'article: {2},
-UOM Conversion factor is required in row {0},Facteur de conversion de l'Unité de mesure est obligatoire dans la ligne {0},
+UOM Conversion factor is required in row {0},Le facteur de conversion est obligatoire dans la ligne {0},
 UOM Name,Nom Unité de mesure,
 UOM coversion factor required for UOM: {0} in Item: {1},Facteur de coversion Unité de mesure requis pour l'Unité de mesure : {0} dans l'Article : {1},
 UOM in case unspecified in imported data,Unité de mesure si non spécifiée dans les données importées,
