--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -6598,7 +6598,7 @@ Resume,Reprendre,
 Retail & Wholesale,Vente de Détail & en Gros,
 Retail Operations,Opérations de vente au détail,
 Retail,Vente de Détail,
-Retain Sample,Conserver l'échantillon,
+Retain Sample,Conserver un échantillon,
 Retained Earnings,Bénéfices Non Répartis,
 Retention Bonus,Prime de fidélisation,
 Retention Stock Entry already created or Sample Quantity not provided,Saisie de stock de rétention déjà créée ou quantité d'échantillon non fournie,
