fix: Translation and website style

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -8357,7 +8357,7 @@ To {0},À {0},
 To,Unité de mesure finale,UOM Conversion Factor
 To,Destinataires,
 Today,Aujourd'hui,
-Toggle Filters,Afficher/cacher les filtrers,
+Toggle Filters,Afficher/cacher les filtres,
 Toggle Public/Private,Changer public/privé,
 Toggle Recent Orders,Voir/cacher les documents récents,
 Token Endpoint,Point de terminaison de jeton,
