--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -7691,7 +7691,7 @@ Stock Reconciliation,Réconciliation du stock,
 Stock Reconciliations,Réconciliations de stock,
 Stock Reports,Rapports de stock,
 Stock Settings,Paramètres des stocks,
-Stock Summary,Récapitulatif du stock,
+Stock Summary,Récapitulatif des stocks,
 Stock Transactions for Item {0} cannot be posted before this time.,Les transactions de stock pour l'article {0} ne peuvent pas être comptabilisées avant cette date.,
 Stock Transactions,Transactions du Stock,
 Stock UOM,Unité de mesure du stock,
