fix: Item Booking UX

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -3798,7 +3798,7 @@ Is Existing Asset,Est Actif Existant,
 Is Expired,Est expiré,
 Is Finance Cost Adjustment,Est un ajustement des coûts financiers,
 Is Finance Cost,Est un coût financier,
-Is Fixed Asset,Est Immobilisation,
+Is Fixed Asset,Est une immobilisation,
 Is Flexible Benefit,Est un avantage flexible,
 Is Free Item,Est un article gratuit,
 Is Frozen,Est Gelé,
