fix: Return status

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -6612,7 +6612,7 @@ Return Against Purchase Invoice,Retour contre Facture d’Achat,
 Return Against Purchase Receipt,Retour contre Reçu d'Achat,
 Return Against Sales Invoice,Retour contre Facture de vente,
 Return amount cannot be greater unclaimed amount,Le montant remboursé ne peut pas être supérieur au montant non réclamé.,
-Return,Retour,
+Return,Avoir,
 Returned Amount,Montant remboursé,
 Returned Qty,Qté Retournée,
 Returns,Retours,
