--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -4186,7 +4186,7 @@ Let's set up the buying module.,Configurez le module d'achats,
 Let's set up your CRM.,Configuration du CRM,
 Let's set up your accounts and taxes.,Configurez votre comptabilité et vos taxes,
 Let's set up your asset management,Configurez votre gestion d'actifs,
-Lets create a Tax Template for Sales ,Créer un modèle de tax pour la vente,
+Lets create a Tax Template for Sales ,Créer un modèle de taxes pour la vente,
 Letter Head,En-tête,
 Letter Heads for print templates.,En-Têtes pour les modèles d'impression.,
 Letter or Email Body Text,Texte du corps de la lettre ou de l'email,
