fix: HR queries

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -3777,6 +3777,7 @@ Is Active,Est actif,
 Is Advance,Est une avance,
 Is Cancelled,Annulée,
 Is Carry Forward,Est un report,
+Is Carry Forward,Est reportable,Leave Type
 Is Company Account,Est le compte de l'entreprise,
 Is Company,Est une société,
 Is Compensatory,Est compensatoire,
@@ -4151,7 +4152,7 @@ Leave application is linked with leave allocations {0}. Leave application cannot
 "Leave blank for home.<br>This is relative to site URL, for example ""about"" will redirect to ""https://yoursitename.com/about""","Laisser vide pour ""home"".<br>Il s'agit d'une URL relative, par exemple ""about"" sera redirigé ver ""https://votresite.com/about""",
 Leave blank if the Supplier is blocked indefinitely,Laisser vide si le fournisseur est bloqué indéfiniment,
 Leave blank to use the standard Delivery Note format,Laissez vide pour utiliser le format de bon de livraison standard,
-"Leave cannot be allocated before {0}, as leave balance has already been carry-forwarded in the future leave allocation record {1}","Congé ne peut être alloué avant le {0}, car le solde de congés a déjà été reporté dans la feuille d'allocation de congés futurs {1}",
+"Leave cannot be allocated before {0}, as leave balance has already been carry-forwarded in the future leave allocation record {1}","Les congés ne peuvent être alloués avant le {0}, car le solde de congés est déjà un report dans la fiche d'allocation de congés {1}",
 "Leave cannot be applied/cancelled before {0}, as leave balance has already been carry-forwarded in the future leave allocation record {1}","Congé ne peut être demandé / annulé avant le {0}, car le solde de congés a déjà été reporté dans la feuille d'allocation de congés futurs {1}",
 Leave of type {0} cannot be longer than {1},Les Congés de type {0} ne peuvent pas être plus long que {1},
 Leave the field empty to make purchase orders for all suppliers,Laissez le champ vide pour passer des commandes pour tous les fournisseurs,
