--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -7488,7 +7488,7 @@ Shopify Supplier,Fournisseur Shopify,
 Shopify Tax Account,Compte de taxe Shopify,
 Shopify Tax/Shipping Title,Taxe Shopify / Titre d'expédition,
 Shopify Webhook Detail,Détail du Webhook Shopify,
-Shopping Cart Settings,Paramètres du Panier,
+Shopping Cart Settings,Paramètres du panier,
 Shopping Cart,Panier,
 Short Name,Nom court,
 Short Term Loan Account,Compte d'emprunt à court terme,
