--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -1926,7 +1926,7 @@ Cross Listing of Item in multiple groups,Liste Croisée d'Articles dans plusieur
 Cumulative Transaction Threshold,Seuil de transaction cumulatif,
 Currency Exchange Settings,Paramètres d'échange de devises,
 Currency Exchange must be applicable for Buying or for Selling.,Le taux de change doit être applicable à l'achat ou la vente.,
-Currency Exchange,Change de Devise,
+Currency Exchange,Taux de change de devise,
 Currency and Price List,Devise et liste de prix,
 Currency can not be changed after making entries using some other currency,Devise ne peut être modifiée après avoir fait des entrées en utilisant une autre devise,
 Currency exchange rate master.,Données de base des taux de change,
