fix: Accounts controller

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -2988,7 +2988,7 @@ Field Name,Nom du champ,
 Field in Bank Transaction,Champ dans la transaction bancaire,
 Field,Champs,
 Fieldname,Nom du champ,
-Fields Mapping,Mapping des champs,
+Fields Mapping,Correspondance des champs,
 Fields will be copied over only at time of creation.,Les champs seront copiés uniquement au moment de la création.,
 Fields,Champs,
 Fieldtype,Type de champ,
