wip: Booking credits

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -575,7 +575,7 @@ Always sync your products from Amazon MWS before synching the Orders details,Syn
 Always sync your products from Amazon MWS before syncing the Orders details,Toujours synchroniser les produits depuis Amazon MWS avant de synchroniser les détails de la commande,
 Amazon MWS Settings,Paramètres Amazon MWS,
 Amazon will synch data updated after this date,Amazon synchronisera les données mises à jour après cette date,
-Amended From,Modication du document,
+Amended From,Modification du document,
 America/New_York,America/New_York,
 Amortization - Depreciation,Amortissements - Dépréciations,
 Amount (Company Currency),Montant (Devise de la Société),
@@ -6768,7 +6768,7 @@ Row # ,Ligne #,
 Row # {0}: Batch No must be same as {1} {2},Ligne # {0} : Le N° de Lot doit être le même que {1} {2},
 Row # {0}: Cannot return more than {1} for Item {2},Ligne # {0} : Vous ne pouvez pas retourner plus de {1} pour l’Article {2},
 Row # {0}: ,Ligne # {0}:,
-Row # {0}: Rate cannot be greater than the rate used in {1} {2},Ligne # {0}: Le Taux ne peut pas être supérieur au taux utilisé dans {1} {2},
+Row # {0}: Rate cannot be greater than the rate used in {1} {2},Ligne # {0}: Le prix unitaire ne peut pas être supérieur au prix unitaire utilisé dans {1} {2},
 Row # {0}: Returned Item {1} does not exist in {2} {3},Ligne #{0}: L'article rendu {1} n'exite pas dans {1} {2},
 Row # {0}: Returned Item {1} does not exists in {2} {3},Ligne # {0} : article retourné {1} n’existe pas dans {2} {3},
 Row # {0}: Serial No is mandatory,Ligne # {0} : N° de série est obligatoire,
