wip: Booking credits

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -6753,7 +6753,7 @@ Round Off Account,Compte d’arrondis,
 Round Off Cost Center,Centre de coûts pour les arrondis,
 Round Off,Arrondi,
 Round the usage quantity down,Arrondir la quantité utilisée à la baisse,
-Round the usage quantity up,Arrondit la quantité utilisée à la hausse,
+Round the usage quantity up,Arrondir la quantité utilisée à la hausse,
 Round to the Nearest Integer,Arrondir à l'entier le plus proche,
 Rounded Total (Company Currency),Total Arrondi (Devise Société),
 Rounded Total,Total Arrondi,
