fix: Process expired booking entries

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -1998,7 +1998,7 @@ Current invoice {0} is not submitted,La facture de la période en cours {0} n'es
 Current,Valeur actuelle,
 Currently no stock available in any warehouse,Il n'y actuellement aucun stock disponible dans les entrepôts,
 Custodian,Responsable,
-Custom Addition Rules,Règle d'addition personnalisées,
+Custom Addition Rules,Règles d'addition personnalisées,
 Custom Formula,Formule personnalisée,
 Custom HTML,HTML personnalisé,
 Custom Remarks,Remarques personnalisées,
