--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -747,6 +747,8 @@ As per your assigned Salary Structure you cannot apply for benefits,La struture 
 "As raw materials projected quantity is more than required quantity, there is no need to create material request.
 			Still if you want to make material request, kindly enable <b>Ignore Existing Projected Quantity</b> checkbox","La quantité de matières premières projetée étant supérieure à la quantité requise, il n'y pas besoin de créer une demande de matériel.
 			Cependant, si vous souhaitez faire une demande de matériel, veuillez activer la case <b>Ignorer les quantités projetées en cours</b>",
+"As the field {0} is enabled, the field {1} is mandatory.","Comme le champ {0} est activé, le champ {1} est obligatoire.",
+"As the field {0} is enabled, the value of the field {1} should be more than 1.","Comme le champ {0} est activé, la valeur du champ {1} doit être supérieure à 1",
 "As there are existing transactions against item {0}, you can not change the value of {1}","Il existe des transactions liées à l'article {0}, vous ne pouvez donc pas modifier la valeur de {1}",
 "As there are sufficient raw materials, Material Request is not required for Warehouse {0}.","Comme il y a suffisamment de matières premières, une demande de matériel n'est pas requise pour l'entrepôt {0}",
 Asset Account,Compte d'actif,
@@ -3656,6 +3658,7 @@ If this is unchecked direct GL Entries will be created to book Deferred Revenue/
 "If you {0} {1} worth item <b>{2}</b>, the scheme <b>{3}</b> will be applied on the item.
 				","Si vous {0} {1} d'article <b>{2}</b>, le schéma <b>{3}</b>
 			 sera appliqué sur l'article.",
+"If you {0} {1} worth item {2}, the scheme {3} will be applied on the item.","Si vous {0} {1} de l'article {2}, la règle {3} sera appliquée sur l'article",
 Ignore Employee Time Overlap,Ignorer les chevauchements de temps des employés,
 Ignore Existing Ordered Qty,Ignorer la quantité commandée existante,
 Ignore Existing Projected Quantity,Ignorer les quantités projetées en cours,
@@ -9587,11 +9590,13 @@ per hour,par heure,
 performing either one below:,effectuer l'une des actions suivantes:,
 prev,préc.,
 production,production,
+purchase,achetez,Pricing Rule
 purchase,achat,
 received from,reçu de,
 rgt,rgt,
 route,route,
 rows selected,lignes sélectionnées,
+sale,vendez,Pricing Rule
 sales,vente,
 sandbox,sandbox,
 selected Payment Terms Template,modèle de termes de paiement sélectionné,
