feat: Monthly recurring revenue report

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -4817,6 +4817,7 @@ Monthly Distribution Percentages,Pourcentages de Répartition Mensuelle,
 Monthly Distribution,Répartition Mensuelle,
 Monthly Quality Inspection,Inspections de qualité mensuelles,
 Monthly Quality Inspections,Inspections de la qualité par mois,
+Monthly Recurring Revenue,Revenu mensuel récurrent,
 Monthly Repayment Amount cannot be greater than Loan Amount,Montant du Remboursement Mensuel ne peut pas être supérieur au Montant du Prêt,
 Monthly Repayment Amount,Montant du Remboursement Mensuel,
 Monthly Sales Target (,Objectif de vente mensuel (,
