fix: LCV posting logic

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -2969,7 +2969,7 @@ Expense Type,Type de dépense,
 Expense account is mandatory for item {0},Compte de charge est obligatoire pour l'article {0},
 Expense or Difference account is mandatory for Item {0} as it impacts overall stock value,Compte de Charge et d'Écarts est obligatoire pour objet {0} car il impacte la valeur globale des actions,
 Expense,Charges,
-Expenses Included In Asset Valuation,Dépenses incluses dans l'évaluation de l'actif,
+Expenses Included In Asset Valuation,Dépenses incluses dans la valorisation de l'actif,
 Expenses Included In Valuation,Dépenses incluses dans la valorisation,
 Expenses,Charges,
 Expiration Date,Date d'expiration,
